fixes horizontal scroll for good

--- a/source/scss/_general.scss
+++ b/source/scss/_general.scss
@@ -109,8 +109,8 @@ code {
 }
 
 .projectName {
-	width: 300px;
-	max-width: 100%;
+	width: 90%;
+	max-width: 300px;
 
 	input {
 		width: 250px;
